--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "babel": "^5.8.23",
     "babelify": "^6.3.0",
+    "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "browserify-middleware": "^7.0.0",
     "express": "^4.13.3",
